# opstools

./: .gitignore  README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: hosts.rs  kubeconfig.rs  main.rs  storage.rs
ui/: index.html  main.js  styles.css
